--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           username: ${{ secrets.HOSTINGER_USER }}
           password: ${{ secrets.HOSTINGER_PASSWORD }}
           port: 22
-          source: "dist/angular19"
+          source: "dist/angular19/*"
           target: "/var/www/html"
 
       - name: Restart Apache2
