--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Deploy Angular App to Apache2
+name: Deploy Angular App to Tomcat
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
       - name: Build and package application
         run: npm run build --prod
 
-      - name: Deploy to Apache2
+      - name: Deploy to Tomcat
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.HOSTINGER_HOST }}
@@ -26,7 +26,8 @@ jobs:
           password: ${{ secrets.HOSTINGER_PASSWORD }}
           port: 22
           source: "dist/angular19/*"
-          target: "/var/www/html"
+          target: /var/lib/tomcat10/webapps/
+          strip_components: 1
 
       - name: Restart Apache2
         uses: appleboy/ssh-action@v1
@@ -36,4 +37,4 @@ jobs:
           password: ${{ secrets.HOSTINGER_PASSWORD }}
           port: 22
           script: |
-            sudo service apache2 restart
+            sudo systemctl restart tomcat10
