--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           target: /var/lib/tomcat10/webapps/
           strip_components: 1
 
-      - name: Restart Apache2
+      - name: Restart Tomcat
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.HOSTINGER_HOST }}
